--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Violin-tone-and-violin-makers_71706
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71706-h/images/cover.jpg
 creator:
   authors:
   - agent_name: Moya, Hidalgo
@@ -9,6 +12,8 @@ creator:
     gutenberg_agent_id: '56341'
     url: http://www.gutenberg.org/2009/agents/56341
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71706#Violin-tone-and-violin-makers
 gutenberg_issued: '2023-09-23'
 identifiers:
   gutenberg: '71706'
